eks-master/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod
  labels:
    app: prod
    environment: Development
  annotations:
    version: "v1.0"
    description: "Deployment of prod application in the dev namespace"
spec:
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  replicas: 6
  selector:
    matchLabels:
      app: prod
  template:
    metadata:
      labels:
        app: prod
    spec:
      containers:
        - name: prod
          image: nginx:latest
---
apiVersion: v1
kind: Service
metadata:
  name: prod
spec:
  selector:
    app: prod
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
