eks-master/sample.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    app: gradeapp
    # app.kubernetes.io/name: gradeapp
    # app.kubernetes.io/component: frontend
    # app.kubernetes.io/instance: gradeapp-submission-portal
    # app.kubernetes.io/part-of: gradeapp
    # app.kubernetes.io/version: 1.0.0
    environment: frontend
    tier: frontend
spec:
  containers:
    - name: grade-app
      image: rslim087/kubernetes-course-grade-submission-portal
      resources:
        requests:
          memory: "128Mi"
          cpu: "500m"
        limits:
          memory: "256Mi"
          cpu: "1"
      ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  selector:
    app: gradeapp
  ports:
    - port: 5001
      targetPort: 5001
  type: ClusterIP
