eks-master/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: app1.cloud-dev.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prod
            port:
              number: 80
  - host: app2.cloud-dev.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prod
            port:
              number: 80
